--- a/src/components/knowmore/knowmore.css
+++ b/src/components/knowmore/knowmore.css
@@ -24,11 +24,17 @@
 }
 /* Background image of knowmore */
 .Knowimage {
-  height: 46px;
+  /* height: 46px;
   width: 46px;
   background-color: red !important;
-  border-radius: 50%;
+  border-radius: 50%; */
   display: flex;
   align-items: center;
   justify-content: center;
+  position:relative;
+  top:0;
+}
+.knowiconimage{
+  
+  position: relative;
 }
