--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
 }
 @font-face {
   font-family: DM sans;
-  src: url(/src//styles/DMSans-VariableFont_opsz\,wght.ttf);
+  src: url(/src//styles/DMSans-Regular.ttf);
 }
 /* ///////////////// */
 
