--- a/src/components/accordion/accordion.css
+++ b/src/components/accordion/accordion.css
@@ -32,3 +32,16 @@
   line-height: 24px;
   padding-left: 14px;
 }
+/* link view more */
+.viewlink{
+  display: flex;
+  justify-content: end;
+  padding-top: 10px;
+  }
+.viewlink a{
+  pointer-events: none;
+  color:#ccaa6d;
+ /* border: none; */
+ /* outline: none; */
+}
+
